fix search overflow

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -14,3 +14,8 @@
         width: calc(100vw - 4rem);
     }
 }
+
+.search-box ul.suggestions {
+    max-height: calc(60vh);
+    overflow-y: auto;
+}
